hphp/test/zend/good/Zend/tests/bug52614.php.expectf
Fatal error: You cannot use this syntax on the left-hand side of an assignment. in %s/bug52614.php on line 34
